# oxypy

./: .gitignore  LICENSE.txt  README.md  magik.py  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: coverage.yml  tests.yml
magik/: raw.py  utils.py
oxypy/: __init__.py  debug.py  default.py  either.py  ops.py  option.py  panic.py  raw.py  result.py  utils.py
tests/: __init__.py  test_either.py  test_option.py  test_oxypy.py  test_result.py
