[metadata]
name = oxypy
version = attr: oxypy.__version__

author = attr: oxypy.__author__
author_email = attr: oxypy.__email__

description = Rusts `Option` and `Result` in Python
long_description = file: README.md, LICENSE.txt

license = MIT

platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = oxypy,
python_requires = >= 3.8

[options.extras_require]
testing =
    tox==4.6.0
    pytest==7.3.1
    pytest-cov==4.1.0
    mypy==1.3.0

[options.package_data]
oxypy = py.typed

[flake8]
max-line-length = 100
